Support remote levelsets